# Proxy_server

./: .gitignore  HostConnector.cpp  HostConnector.hpp  LICENSE  Makefile  PSiCAlgorithm.cpp  PSiCAlgorithm.hpp  README.md  SSLInitializer.hpp  Server.hpp  ServerOwner.cpp  domena.key
Server/: CMakeCache.txt  CMakeLists.txt  Client.cpp  Client.hpp  ConnectionType.hpp  HostConnector.cpp  HostConnector.hpp  HttpRequest.hpp  HttpRequestParser.cpp  HttpRequestParser.hpp  HttpRequestParserDummy.hpp  HttpResponseFactory.hpp  Makefile  RequestURIParser.hpp  SSLDataReader.hpp  SSLDataWriter.hpp  SSLInitializer.hpp  Server  Server.hpp  ServerInitializer.hpp  ServerMain.cpp  ServerOwner.cpp  ServerOwner.hpp  ServerSettings.hpp  TestHttpRequestParser.cpp  TestServerSettings.cpp  cert.pem  cmake_install.cmake  http_connection_data_example.json  key.pem  makefile
Server/ArgumentParser/: ArgumentParser.hpp  InputSettings.hpp
Server/ClientAcceptors/: ClientAcceptorChooser.cpp  ClientAcceptorChooser.hpp  UnencryptedClientConnectionAcceptor.hpp
Server/DataReaders/: DataFromClientReader.hpp  DataFromClientReaderChooser.cpp  DataFromServerReader.hpp  SSLDataFromClientReader.hpp
Server/DataWriters/: DataToClientWriter.hpp  DataToClientWriterChooser.cpp  DataToClientWriterChooser.hpp  DataToServerWriter.hpp  SSLDataToClientWriter.hpp
Server/Disconnectors/: HostDisconnector.hpp
Server/HttpRequestParser/: HttpRequest.hpp  IPAndPortExtractor.hpp  RequestURIParser.hpp
Server/Initializers/: SSLInitializer.hpp
Server/LogSystem/: LogSystem.hpp
Server/OperationStatusHandlers/: OperationStatusHandlerChooser.cpp  OperationStatusHandlerChooser.hpp
Server/ServerSettings/: ServerSettings.hpp  SettingsEditor.cpp  http_connection_data_example.json
Server/certs/: ca.crt  ca.key  ca.srl  domena.crt  domena.csr
Server/include/: Client.hpp  ClientConnectionType.hpp  ConnectionType.hpp  HostConnector.hpp  HttpResponseFactory.hpp  IPAndPortExtractor.hpp  RequestURIParser.hpp  Server.hpp  ServerOwner.hpp
Server/src/: Client.cpp  HostConnector.cpp  HttpResponseFactory.cpp  Server.cpp  (+2 more)
(+72 files in other folders)
